# linux-kernel-module-rust-1

./: .gitignore  build.rs
kernel-cflags-finder/: .gitignore  Makefile
src/: allocator.rs  bindings_helper.h  file_operations.rs  helpers.c  lib.rs  sysctl.rs
sync-test/: Cargo.toml  Kbuild  Makefile
sync-test/src/: lib.rs
tests/json-sysctl/: Cargo.toml
tests/json-sysctl/src/: lib.rs
